<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="40px"
        android:paddingTop="20px">


        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/projectFullAddress" />

            <TextView
                android:id="@+id/projectFullAddress"
                style="@style/detail_small_body"
                android:text="广东省广州市越秀区东风西路197号国际金融大厦" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/decorationCategoryLabel" />

            <TextView
                android:id="@+id/decorationCategoryLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/decorationLevelLabel" />

            <TextView
                android:id="@+id/decorationLevelLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/officeBuildingLevelLabel" />

            <TextView
                android:id="@+id/officeBuildingLevelLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>


        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/constructionSpaceLabel" />

            <TextView
                android:id="@+id/constructionSpaceLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/projectRequirementLabel" />

            <TextView
                android:id="@+id/projectRequirementLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>


        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/budgetForProjectLabel" />

            <TextView
                android:id="@+id/budgetForProjectLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>


        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/projectPeriodLabel" />

            <TextView
                android:id="@+id/projectPeriodLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/qualityPriceRatioLabel" />

            <TextView
                android:id="@+id/qualityPriceRatioLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/decorationStyleLabel" />

            <TextView
                android:id="@+id/decorationStyleLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/designRequirementLabel" />

            <TextView
                android:id="@+id/designRequirementLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/environmentProtectionLabel" />

            <TextView
                android:id="@+id/environmentProtectionLabel"
                style="@style/detail_small_body"
                android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>