<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="40px"
        android:paddingTop="20px">


        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/companyName" />

            <TextView
                android:id="@+id/companyName"
                style="@style/detail_small_body"
                android:text="yyyyyyyyyyyyyyyyyyyyyyyy" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/companyStartupFund" />

            <TextView
                android:id="@+id/companyStartupFund"
                style="@style/detail_small_body"
                android:text="YYYYYYYYYYYYYYYYYYYYYYYY" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/companyOwner" />

            <TextView
                android:id="@+id/companyOwner"
                style="@style/detail_small_body"
                android:text="YYYYYYYYYYYYYYYYYYYYYYYY" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/runTimeLabel" />

            <TextView
                android:id="@+id/runTimeLabel"
                style="@style/detail_small_body"
                android:text="YYYYYYYYYYYYYYYYYYYYYYYY" />

        </LinearLayout>


        <LinearLayout style="@style/detail_ll">

            <TextView

                style="@style/detail_small_title"
                android:text="@string/stockStructure" />

            <TextView
                android:id="@+id/stockStructure"
                style="@style/detail_small_body"
                android:text="YYYYYYYYYYYYYYYYYYYYYYYY" />

        </LinearLayout>

        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/companyScopeLabel" />

            <TextView
                android:id="@+id/companyScopeLabel"
                style="@style/detail_small_body"
                android:text="YYYYYYYYYYYYYYYYYYYYYYYY" />

        </LinearLayout>


        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/companyStageLabel" />

            <TextView
                android:id="@+id/companyStageLabel"
                style="@style/detail_small_body"
                android:text="YYYYYYYYYYYYYYYYYYYYYYYY" />

        </LinearLayout>


        <LinearLayout style="@style/detail_ll">

            <TextView
                style="@style/detail_small_title"
                android:text="@string/companyManCountLabel" />

            <TextView
                android:id="@+id/companyManCountLabel"
                style="@style/detail_small_body"
                android:text="YYYYYYYYYYYYYYYYYYYYYYYY" />

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>