<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sttech.supervisor.ui.activity.MainActivity">

    <include layout="@layout/ly_header" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sign_margin_left_right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:layout_marginTop="20px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone" />

        <TextView
            android:id="@+id/mobile_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:text="@string/_186_8152_9205" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_text_input_height"
        android:layout_marginLeft="@dimen/sign_margin_left_right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:layout_marginTop="20px">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_pwd" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordAgainWrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_text_input_height"
        android:layout_marginLeft="@dimen/sign_margin_left_right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:layout_marginTop="20px">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_pwd_again" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_button_height"
        android:layout_marginLeft="@dimen/sign_margin_left_right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:layout_marginTop="30px"
        android:background="@drawable/sele_common_btn"
        android:onClick="resetOnClick"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="32px" />


</LinearLayout>