<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_selector"
    android:clickable="true"
    android:padding="20px">

    <ImageView
        android:id="@+id/head"
        android:layout_width="85px"
        android:layout_height="85px"
        android:src="@mipmap/cloudwalk_face_head" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_toRightOf="@+id/head"
        android:text="@string/name_simple"
        android:textSize="32px" />

    <LinearLayout
        android:id="@+id/ll_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/head"
        android:layout_alignBottom="@id/head"
        android:layout_marginLeft="20px"
        android:layout_toRightOf="@+id/head"
        android:background="@color/colorPrimary"
        android:padding="5px">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_work_record_type"
            android:textColor="@color/white"
            android:textSize="24px" />

    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20px"
        android:layout_toLeftOf="@+id/time"
        android:text="@string/date_simple" />


    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/time_simple" />

    <TextView
        android:id="@+id/send_fail_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/time"
        android:layout_marginTop="20px"
        android:text=""
        android:textColor="@color/number_light"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_type"
        android:layout_below="@id/ll_type"
        android:layout_marginTop="30px"
        android:text="@string/simple_work_record_body" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/record_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ll_type"
        android:layout_below="@id/body"
        android:layout_marginTop="30px"
        android:overScrollMode="never" />

</RelativeLayout>