<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:orientation="vertical">

    <include layout="@layout/ly_header" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20px"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_marginTop="50px"
            android:text="@string/error_code" />

        <TextView
            android:id="@+id/error_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv1"
            android:layout_marginLeft="20px"
            android:layout_toRightOf="@id/tv1"
            android:text="@string/error_code_simple" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv1"
            android:layout_below="@id/tv1"
            android:layout_marginRight="50px"
            android:layout_marginTop="20px"
            android:text="@string/error_body_simple" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/error_btn"
            style="@style/CommonButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_button_height"
            android:layout_below="@id/error_msg"
            android:layout_marginLeft="@dimen/sign_margin_left_right"
            android:layout_marginRight="@dimen/sign_margin_left_right"
            android:layout_marginTop="70px"
            android:onClick="onClick"
            android:text="@string/send_fail_btn_txt"
            android:textColor="@android:color/white"
            android:textSize="32px" />

    </RelativeLayout>


</LinearLayout>