<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200px"
        android:layout_height="200px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120px"
        android:src="@mipmap/ic_launcher" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_text_input_height"
        android:layout_marginLeft="@dimen/sign_margin_left_right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:layout_marginTop="80px">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_mobile_phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_text_input_height"
        android:layout_marginLeft="@dimen/sign_margin_left_right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:layout_marginTop="30px">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_pwd" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in"
        style="@style/CommonButton"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="20px"
        android:layout_marginLeft="@dimen/sign_margin_left_right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:onClick="signInOnClick"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="32px" />

    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/sign_margin_left_right"
        android:layout_marginTop="25px"
        android:onClick="signInOnClick"
        android:text="@string/forget_pwd"
        android:textColor="@color/colorPrimary"
        android:textSize="28px" />


</LinearLayout>